<resources>
    <string name="app_name">Lab_7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Login Fragment -->
    <string name="laboratoria_7">Laboratorio 7</string>
    <string name="email_input">Ingesa tu correo</string>
    <string name="new_User">¿Nuevo usuario?</string>
    <string name="new_account">¡Crea tu cuenta aquí!</string>
    <string name="log_in">Inicar sesión</string>
    <!-- New Account Fragment -->
    <string name="newAccount">Nueva cuenta</string>
    <string name="createAccount">Crear cuenta</string>
    <!-- Home Fragment -->
    <string name="welcome">¡Buenos días!</string>
    <string name="hello">Hola</string>
    <string name="we_need">necesitamos que</string>
    <string name="update_profileText">actualices tu perfil</string>
    <string name="updateProfile">Actualizar perfil</string>
    <!-- Profile Fragment -->
    <string name="profile">Mi perfil</string>
    <string name="uptade">Actualizar</string>
</resources>