<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/txtView_fragmentHome_goodMorningMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_fragmentHome_messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayout_fragmentHome_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtView_fragmentHome_messageToUser"
        app:layout_constraintEnd_toEndOf="@+id/txtView_fragmentHome_goodMorningMessage"
        app:layout_constraintStart_toStartOf="@+id/txtView_fragmentHome_goodMorningMessage"
        app:layout_constraintTop_toBottomOf="@+id/txtView_fragmentHome_goodMorningMessage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/hello" />

        <TextView
            android:id="@+id/txtView_fragmentHome_emailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/we_need" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtView_fragmentHome_messageToUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profileText"
        app:layout_constraintBottom_toTopOf="@+id/button_fragmentHome_updateProfile"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_fragmentHome_messages"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_fragmentHome_messages"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_fragmentHome_messages" />

    <Button
        android:id="@+id/button_fragmentHome_updateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:backgroundTint="#FF7E27"
        android:text="@string/updateProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_fragmentHome_messageToUser"
        app:layout_constraintStart_toStartOf="@+id/txtView_fragmentHome_messageToUser"
        app:layout_constraintTop_toBottomOf="@+id/txtView_fragmentHome_messageToUser" />


</androidx.constraintlayout.widget.ConstraintLayout>