<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/txtView_fragmentLogin_labName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laboratoria_7"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInputLayout_fragmentLogin_emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout_fragmentLogin_emailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_fragmentLogin_buttons"
        app:layout_constraintEnd_toEndOf="@+id/txtView_fragmentLogin_labName"
        app:layout_constraintStart_toStartOf="@+id/txtView_fragmentLogin_labName"
        app:layout_constraintTop_toBottomOf="@+id/txtView_fragmentLogin_labName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout_fragmentLogin_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button_fragmentLogIn_startSession"
        app:layout_constraintEnd_toEndOf="@+id/txtInputLayout_fragmentLogin_emailInput"
        app:layout_constraintStart_toStartOf="@+id/txtInputLayout_fragmentLogin_emailInput"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout_fragmentLogin_emailInput">

        <Button
            android:id="@+id/btn_fragmentLogIn_newAccount"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_User"
            android:textColor="#59DDED" />

        <Button
            android:id="@+id/btn_fragmentLogIn_createAccount"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textColor="#59DDED" />
    </LinearLayout>

    <Button
        android:id="@+id/button_fragmentLogIn_startSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="#FF7E27"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_fragmentLogin_buttons"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_fragmentLogin_buttons"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_fragmentLogin_buttons" />

    <!-- TODO: Update blank fragment layout -->


</androidx.constraintlayout.widget.ConstraintLayout>